# rust-stm32g474-hal-playground

./: Cargo.toml  README.md
.cargo/: config.toml
app/: Cargo.toml  STM32G474xx.svd
app/src/: main.rs
bsp/: Cargo.toml
bsp/src/: lib.rs
bsp_interface_demoapp/: Cargo.toml
bsp_interface_demoapp/src/: gpio_pin.rs  lib.rs
bsp_stm32g474/: Cargo.toml
bsp_stm32g474/src/: gpio_driver_manager.rs  lib.rs
interfaces-hal/: Cargo.toml
interfaces-hal/src/: lib.rs
stm32g474-hal/: Cargo.toml
stm32g474-hal/src/: lib.rs  lpuart1.rs  rcc.rs  uart1.rs
